--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     <link rel="stylesheet" href="/css/style.min.css" />
   </head>
   <body>
-    <div class="container-fluid header px-0">
+    <div class="container-fluid header px-1 px-md-0">
       <div class="header-nav py-3">
         <div class="col-lg-10 mx-auto">
           <div class="row align-items-center">
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-4">
               <div class="logo">
                 <img src="/img/logo.png" alt="" />
               </div>
             </div>
-            <div class="col-lg-10">
+            <div class="col-lg-10 col-8">
               <div class="navBar">
-                <nav class="nav justify-content-end">
+                <nav class="nav justify-content-end hide-nav" id="nav">
                   <a href="#" class="nav-link">Главная</a>
                   <a href="#" class="nav-link">Наш товар</a>
                   <a href="#" class="nav-link">Контакты</a>
@@ -64,12 +64,12 @@
       <div class="col-lg-6 mx-auto">
         <div class="top-address">
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 mb-3 mb-lg-0">
               <div class="row align-items-center">
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-2">
                   <img src="/img/icon/location.png" alt="" />
                 </div>
-                <div class="col-lg-10">
+                <div class="col-lg-10 col-10">
                   <p>
                     130100, Узбекистан, Джизакская область, Ш.Рашидовский район,
                     улица Пахтакор, дом 128
@@ -79,10 +79,10 @@
             </div>
             <div class="col-lg-6">
               <div class="row align-items-center">
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-2">
                   <img src="/img/icon/phone.png" alt="" />
                 </div>
-                <div class="col-lg-10">
+                <div class="col-lg-10 col-10">
                   <p>Telegram: +998 (88) 328-30-00</p>
                   <p>Whatsapp: +998 (91) 943-44-03</p>
                 </div>
@@ -95,7 +95,7 @@
     <div class="col-lg-10 mx-auto my-5 pt-5 content">
       <p class="content-text">Продукция</p>
       <h1 class="content-title">Имеем в наличии</h1>
-      <div class="row py-5">
+      <div class="row py-5 px-2 px-md-0">
         <div class="col-lg-6 mb-5">
           <div class="products">
             <div class="products-img">
@@ -136,17 +136,14 @@
                 <h2>Детский одежды</h2>
               </div>
             </div>
-            <div class="products-content">
-              <!-- <p>Футболки, Худи, Пижами, Шорти</p> -->
-            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="section py-5">
+    <div class="section py-5 px-2 px-md-0">
       <div class="col-lg-10 mx-auto">
         <p class="section-text">Преимущества</p>
-        <h1 class="section-title">Имеем в наличии:</h1>
+        <h1 class="section-title">Все для вашего удобства</h1>
         <div class="col-lg-6 section-content text-center py-5 mt-5">
           <div class="row">
             <div class="col-lg-6 mb-5">
@@ -165,7 +162,7 @@
               />
               <p>Скидки и распродажи</p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 mb-5">
               <img src="/img/icon/003-shipped.png" class="section-img" alt="" />
               <p>Быстрая доставка</p>
             </div>
@@ -177,7 +174,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-10 mx-auto my-5 py-5 about">
+    <div class="col-lg-10 mx-auto my-5 py-5 px-2 px-md-0 about">
       <p class="content-text">Немного о нас</p>
       <h1 class="content-title">Стильная мужская одежда</h1>
       <div class="row justify-content-between pt-5">
@@ -193,7 +190,7 @@
           </p>
           <button class="btn btn-danger btn-lg py-3 px-5">Подробнее</button>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 text-center">
           <div class="about-img">
             <img src="/img/about.jpg" class="about-img" alt="" />
           </div>
@@ -201,7 +198,7 @@
       </div>
     </div>
     <div class="line"></div>
-    <div class="footer py-5">
+    <div class="footer py-5 px-2 px-md-0">
       <div class="col-lg-10 mx-auto">
         <div class="row">
           <div class="col-lg-6">
